feat: Add functionalities Create Abstraction of services, infrastructure and domain models; Create Unit of Work to handle db transactions; Use SQLite-expo to store all created workouts, still using AsyncStorage to handle active workout; Create Repositories to centralize data management using database; Create service and repository provider to use them on components

--- a/app.json
+++ b/app.json
@@ -32,6 +32,17 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-sqlite",
+        {
+          "enableFTS": true,
+          "useSQLCipher": true,
+          "android": {
+            "enableFTS": false,
+            "useSQLCipher": false
+          }
+        }
       ]
     ],
     "experiments": {
